test/parser/var-decl-no-id.delta.output
var-decl-no-id.delta:4:5: error: expected identifier, got number
var 1
    ^
var-decl-no-id.delta:4:5: error: unexpected number
var 1
    ^
