test/parser/var-decl-no-id.delta
// RUN: %check_errors %not %delta -parse %s

// CHECK: [[@LINE+1]]:5: error: expected identifier, got number
var 1
